--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.7.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
     "react-dimmer": "^1.0.7",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sass": "^1.53.0",
