--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.27.2",
     "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
+    "react-currency-masked-input": "^2.5.0",
     "react-dimmer": "^1.0.7",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
